Added Edit Stack activity with a list view. I filled in the list with text strings for testing the click functionality of items in the list. I also added a fake card stack to the card stack screen via a button just to link the activities together for testing. Jon, you can use the code I tied to that button to see how you should launch the edit stack activity from the item list within that activity. Hope you guys are making progress!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,16 @@
         <activity
             android:name=".CategoriesActivity"
             android:label="@string/title_activity_categories"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".EditStackActivity"
+            android:label="@string/title_activity_edit_stack"
+            android:parentActivityName=".Main2Activity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.mercy.flashstax.Main2Activity" />
+        </activity>
     </application>
 
 </manifest>
